modified:   .gitignore new file:   demo_gradio.py new file:   demo_gradio_example.py modified:   llava/mm_utils.py new file:   nohup.out new file:   one_video_request.py modified:   playground/demo/video_demo.py new file:   sglang_server/launch_server.py new file:   sglang_server/request.py new file:   video_analysis.py

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,10 @@ playground/*.json
 mlx_configs/
 data_processing/
 # demo/
+LLaVA-Video-7B-Qwen2
+LLaVA-Video-7B-Qwen2-hf
+SanyaChoi
+package_videos
+pets
+examples
+.gradio
